Update the padding bottom an the font size of nav

--- a/style.css
+++ b/style.css
@@ -224,6 +224,12 @@ td, th{
     nav{
         position: static;
     }
+    nav a{
+        font-size: 15px;
+    }
+    nav ul{
+        padding-bottom: 5px;
+    }
 
    .caja, .principal, .mapa-contenido, 
    .contenido-diferenciales, .video{
